--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/raleway-webfont/raleway.css"
+              "node_modules/raleway-webfont/raleway.css",
+              "node_modules/snazzy-info-window/dist/snazzy-info-window.css"
             ],
             "scripts": []
           },
