--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
+    "@agm/snazzy-info-window": "^1.0.0-beta.5",
     "@angular/animations": "^7.2.6",
     "@angular/common": "^7.2.6",
     "@angular/compiler": "^7.2.6",
@@ -27,6 +29,7 @@
     "popper.js": "^1.14.7",
     "raleway-webfont": "^3.0.1",
     "rxjs": "~6.4.0",
+    "snazzy-info-window": "^1.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -41,7 +44,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
