--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser-dynamic": "^7.2.6",
     "@angular/router": "^7.2.6",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "angular-bootstrap-md": "^7.4.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
+    "pro-gallery-layouter": "^2.0.30",
     "raleway-webfont": "^3.0.1",
     "rxjs": "~6.4.0",
     "snazzy-info-window": "^1.1.1",
