--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/cli": "^7.3.3",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^7.2.6",
+    "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~11.9.5",
