--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-gallery": "^5.9.1",
     "popper.js": "^1.14.7",
     "pro-gallery-layouter": "^2.0.30",
     "raleway-webfont": "^3.0.1",
