--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
     "@agm/snazzy-info-window": "^1.0.0-beta.5",
-    "@angular/animations": "^7.2.6",
-    "@angular/common": "^7.2.6",
-    "@angular/compiler": "^7.2.6",
-    "@angular/core": "^7.2.6",
-    "@angular/forms": "^7.2.6",
-    "@angular/platform-browser": "^7.2.6",
-    "@angular/platform-browser-dynamic": "^7.2.6",
-    "@angular/router": "^7.2.6",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.4",
-    "angular-bootstrap-md": "^7.4.3",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.0",
+    "angular-bootstrap-md": "^7.5.3",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.9",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
@@ -38,12 +38,12 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.3",
-    "@angular/cli": "^7.3.3",
-    "@angular/compiler-cli": "^7.2.6",
-    "@angular/language-service": "^7.2.6",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@types/google.analytics": "0.0.39",
-    "@types/jasmine": "~3.3.9",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~11.9.5",
     "codelyzer": "~4.5.0",
